--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -44,9 +44,8 @@ img {
 .section__title {
     margin-bottom: 50px;
     text-align: center;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+
+    @include font(700, 36px, 42px);
     letter-spacing: 0.03em;
 }
 
