--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -11,17 +11,17 @@
     width: 44px;
     height: 44px;
     border-radius: 50%;
-        transition: fill var(--animation-duration) var(--animation-timing-function),
-        background-color var(--animation-duration) var(--animation-timing-function);
+    transition: fill var(--animation-duration) var(--animation-timing-function),
+    background-color var(--animation-duration) var(--animation-timing-function);
     fill: var(--icon-fill);
+
+    &:hover,
+    &:focus {
+        fill: var(--primary-background-color);
+        background-color: var(--accent-color);
+    }
 }
 
-.social-links__link:hover,
-.social-links__link:focus {
-    fill: var(--primary-background-color);
-    background-color: var(--accent-color);
-}
-
-.social-links--right:not(:last-child) {
+.social-links_right:not(:last-child) {
     margin-right: 10px;
 }
