--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -4,7 +4,6 @@
     border-style: none;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
@@ -12,17 +11,16 @@
     letter-spacing: 0.06em;
     color: var(--tertiary-text-color);
     background-color: var(--accent-color);
-
     cursor: pointer;
     transition: background-color var(--animation-duration) var(--animation-timing-function);
+
+    &:hover,
+    &:focus {
+        background-color: #188ce8;
+    }
 }
 
-.modal-btn:hover,
-.modal-btn:focus {
-    background-color: #188ce8;
-}
-
-.modal-btn--close {
+.modal-btn_close {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -37,12 +35,13 @@
     background-color: var(--primary-background-color);
     cursor: pointer;
     transition: fill var(--animation-duration) var(--animation-timing-function);
+    
+    &:hover,
+    &:focus {
+        fill: var(--accent-color);
+    }
 }
 
-.modal-btn--close:hover,
-.modal-btn--close:focus {
-    fill: var(--accent-color);
-}
 
 .radio-btn {
     padding: 6px 22px;
@@ -60,15 +59,17 @@
     transition: color var(--animation-duration) var(--animation-timing-function),
         background-color var(--animation-duration) var(--animation-timing-function),
         box-shadow var(--animation-duration) var(--animation-timing-function);
+        
+    &:hover,
+    &:focus {
+        color: var(--tertiary-text-color);
+        background-color: var(--accent-color);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
 }
 
-.radio-btn:hover,
-.radio-btn:focus {
-    color: var(--tertiary-text-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+
 
 .submit-btn {
     display: inline-flex;
@@ -90,11 +91,15 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color var(--animation-duration) var(--animation-timing-function);
+
+    &:hover,
+    &:focus {
+        background-color: #188ce8;
+    }
 }
 
-.submit-btn:hover,
-.submit-btn:focus {
-    background-color: #188ce8;
+.submit-btn__icon_left {
+    margin-left: 10px;
 }
 
 
