--- a/sass/layout/_activities.scss
+++ b/sass/layout/_activities.scss
@@ -12,13 +12,14 @@
 }
 
 .activities__description {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--tertiary-text-color);
     background-color: rgba(47, 48, 58, 0.8);
+    
     position: absolute;
     display: flex;
     justify-content: center;
