--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -17,13 +17,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
     background-color: var(--tertiary-background-color);
     border-radius: 4px;
 }
 
 .advantages__title {
     margin-bottom: 10px;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
