--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -3,8 +3,7 @@
 }
 
 .team__list {
-    display: flex;
-    flex-wrap: wrap;
+    @extend %flex-wrap;
     margin-left: -30px;
     margin-top: -30px;
 }
