--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,12 @@
 @import './utils/variables';
 @import './utils/visually-hidden';
+@import './utils/placeholders';
+@import './utils/mixins';
 
 @import './base/common';
 @import './base/container';
 @import './components/buttons';
+@import './components/logo';
 
 @import './components/social-links';
 @import './components/backdrop';
