--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,11 +7,11 @@
 }
 
 
-.logo_color_dark {
+.logo__dark {
     color: #000000;
 }
 
 
-.logo_color_light {
+.logo__light {
     color: var(--tertiary-text-color);
 }
