--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
   overflow: hidden;
 }
 
-.team__list, .clients__list, .work-examples__list {
+.team, .clients, .work-examples {
   display: flex;
   flex-wrap: wrap;
 }
@@ -50,16 +50,13 @@ p {
 
 ul,
 ol {
+  list-style: none;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
 }
 
-.list {
-  list-style: none;
-}
-
-.link {
+a {
   text-decoration: none;
 }
 
@@ -69,9 +66,25 @@ img {
   height: auto;
 }
 
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.section_no-padding-top {
+  padding-top: 0;
+}
+
+.section_other-bcg {
+  background-color: var(--tertiary-background-color);
 }
 
 .section__title {
@@ -83,36 +96,35 @@ img {
   letter-spacing: 0.03em;
 }
 
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+.section__title_margin-bottom {
+  margin-bottom: 50px;
 }
 
-.modal-btn {
+.button {
   min-width: 200px;
-  padding: 10px 32px;
-  border-style: none;
-  border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+  border-style: none;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--tertiary-text-color);
   background-color: var(--accent-color);
-  cursor: pointer;
   transition: background-color var(--animation-duration) var(--animation-timing-function);
 }
 
-.modal-btn:hover, .modal-btn:focus {
+.button:hover, .button:focus {
   background-color: #188ce8;
 }
 
-.modal-btn_close {
+.modal-button {
+  padding: 10px 32px;
+}
+
+.modal-button_close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -129,15 +141,23 @@ img {
   transition: fill var(--animation-duration) var(--animation-timing-function);
 }
 
-.modal-btn_close:hover, .modal-btn_close:focus {
+.modal-button_close:hover, .modal-button_close:focus {
   fill: var(--accent-color);
 }
 
-.radio-btn {
+.submit-button {
+  padding: 10px 28px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.submit-button__icon_left {
+  margin-left: 10px;
+}
+
+.radio-button {
   padding: 6px 22px;
-  border-style: none;
-  border-radius: 4px;
-  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
@@ -145,41 +165,15 @@ img {
   color: var(--primary-text-color);
   background-color: var(--tertiary-background-color);
   cursor: pointer;
+  border-style: none;
+  border-radius: 4px;
   transition: color var(--animation-duration) var(--animation-timing-function), background-color var(--animation-duration) var(--animation-timing-function), box-shadow var(--animation-duration) var(--animation-timing-function);
 }
 
-.radio-btn:hover, .radio-btn:focus {
+.radio-button:hover, .radio-button:focus {
   color: var(--tertiary-text-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.submit-btn {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 28px;
-  min-width: 200px;
-  background-color: var(--accent-color);
-  color: var(--tertiary-text-color);
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-style: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color var(--animation-duration) var(--animation-timing-function);
-}
-
-.submit-btn:hover, .submit-btn:focus {
-  background-color: #188ce8;
-}
-
-.submit-btn__icon_left {
-  margin-left: 10px;
 }
 
 .logo {
@@ -191,21 +185,53 @@ img {
   color: var(--accent-color);
 }
 
-.logo_color_dark {
+.logo__dark {
   color: #000000;
 }
 
-.logo_color_light {
+.logo__light {
   color: var(--tertiary-text-color);
 }
 
-.social-links__list {
+.contacts {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.contacts__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.contacts__link {
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+  transition: color var(--animation-duration) var(--animation-timing-function);
+}
+
+.contacts__link:hover, .contacts__link:focus {
+  color: var(--accent-color);
+}
+
+.contacts__icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.socials {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.social-links__link {
+.socials__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -216,12 +242,12 @@ img {
   fill: var(--icon-fill);
 }
 
-.social-links__link:hover, .social-links__link:focus {
+.socials__link:hover, .socials__link:focus {
   fill: var(--primary-background-color);
   background-color: var(--accent-color);
 }
 
-.social-links_right:not(:last-child) {
+.socials_right:not(:last-child) {
   margin-right: 10px;
 }
 
@@ -436,38 +462,6 @@ img {
   border-radius: 2px;
 }
 
-.header-contacts {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
-
-.header-contacts__mail {
-  margin-right: 50px;
-}
-
-.header-contacts__link {
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
-  transition: color var(--animation-duration) var(--animation-timing-function);
-}
-
-.header-contacts__link:hover, .header-contacts__link:focus {
-  color: var(--accent-color);
-}
-
-.header-contacts__icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
 .hero {
   max-width: 1600px;
   margin-left: auto;
@@ -491,7 +485,7 @@ img {
   color: var(--tertiary-text-color);
 }
 
-.advantages__list {
+.advantages {
   display: flex;
   margin-left: -30px;
   margin-top: -30px;
@@ -531,10 +525,6 @@ img {
 }
 
 .activities {
-  padding-top: 0;
-}
-
-.activities__list {
   display: flex;
   justify-content: space-between;
 }
@@ -561,15 +551,11 @@ img {
 }
 
 .team {
-  background-color: var(--tertiary-background-color);
-}
-
-.team__list {
   margin-left: -30px;
   margin-top: -30px;
 }
 
-.team__card {
+.team__item {
   flex-basis: calc((100% - 4 * 30px) / 4);
   margin-left: 30px;
   margin-top: 30px;
@@ -578,13 +564,13 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team__card-box {
+.team__box {
   padding: 30px 32px;
   text-align: center;
   border-radius: 0px 0px 4px 4px;
 }
 
-.team__member {
+.team__title {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -592,7 +578,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-.team__position {
+.team__description {
   margin-bottom: 16px;
   font-weight: 400;
   font-size: 16px;
@@ -601,11 +587,7 @@ img {
   color: var(--secondary-text-color);
 }
 
-.clients .section__title {
-  margin-bottom: 50px;
-}
-
-.clients__list {
+.clients {
   margin-top: -30px;
   margin-left: -30px;
 }
@@ -639,7 +621,7 @@ img {
   fill: currentColor;
 }
 
-.filter__list {
+.filter {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
@@ -649,7 +631,7 @@ img {
   margin-right: 8px;
 }
 
-.work-examples__list {
+.work-examples {
   margin-top: -30px;
   margin-left: -30px;
 }
@@ -690,12 +672,12 @@ img {
   color: var(--secondary-text-color);
 }
 
-.image__wrapper {
+.image-wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.overlay__text {
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -712,8 +694,8 @@ img {
   transition: transform var(--animation-duration) var(--animation-timing-function);
 }
 
-.work-examples__link:hover .overlay__text,
-.work-examples__link:focus .overlay__text {
+.work-examples__link:hover .overlay,
+.work-examples__link:focus .overlay {
   transform: translateY(0%);
 }
 
@@ -723,7 +705,7 @@ img {
   background-color: var(--secondary-background-color);
 }
 
-.footer .container {
+.footer-container {
   display: flex;
   align-items: baseline;
 }
@@ -733,7 +715,7 @@ img {
   margin-bottom: 20px;
 }
 
-.footer-contacts__box {
+.footer-contacts {
   margin-right: 70px;
 }
 
@@ -754,7 +736,7 @@ img {
   color: var(--accent-color);
 }
 
-.footer-contacts__link_color {
+.footer-contacts__link_other-color {
   color: var(--tertiary-text-color);
 }
 
@@ -769,7 +751,7 @@ img {
   color: var(--tertiary-text-color);
 }
 
-.footer__social-links {
+.footer__socials {
   fill: var(--primary-background-color);
   background-color: rgba(255, 255, 255, 0.1);
 }
