--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,53 +1,68 @@
-.modal-btn {
+.button{
     min-width: 200px;
-    padding: 10px 32px;
-    border-style: none;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.06em;
+
+    border-style: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: var(--tertiary-text-color);
     background-color: var(--accent-color);
-    cursor: pointer;
-    transition: background-color var(--animation-duration) var(--animation-timing-function);
-
+        transition: background-color var(--animation-duration) var(--animation-timing-function);
+        
     &:hover,
     &:focus {
         background-color: #188ce8;
     }
 }
 
-.modal-btn_close {
+.modal-button {
+    padding: 10px 32px;
+}
+
+.modal-button_close {
     position: absolute;
     top: 8px;
     right: 8px;
     width: 30px;
     height: 30px;
     padding: 0;
+
     display: flex;
     justify-content: center;
     align-items: center;
+
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--primary-background-color);
     cursor: pointer;
     transition: fill var(--animation-duration) var(--animation-timing-function);
-    
+
     &:hover,
     &:focus {
         fill: var(--accent-color);
     }
 }
 
+.submit-button {
+    padding: 10px 28px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
 
-.radio-btn {
+.submit-button__icon_left {
+    margin-left: 10px;
+}
+
+.radio-button {
     padding: 6px 22px;
-    border-style: none;
-    border-radius: 4px;
-    font-family: inherit;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -55,6 +70,8 @@
     color: var(--primary-text-color);
     background-color: var(--tertiary-background-color);
     cursor: pointer;
+    border-style: none;
+    border-radius: 4px;
 
     transition: color var(--animation-duration) var(--animation-timing-function),
         background-color var(--animation-duration) var(--animation-timing-function),
@@ -71,36 +88,8 @@
 
 
 
-.submit-btn {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px 28px;
-    min-width: 200px;
 
-    background-color: var(--accent-color);
-    color: var(--tertiary-text-color);
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
 
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-style: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color var(--animation-duration) var(--animation-timing-function);
-
-    &:hover,
-    &:focus {
-        background-color: #188ce8;
-    }
-}
-
-.submit-btn__icon_left {
-    margin-left: 10px;
-}
 
 
 
