--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,8 +1,4 @@
-.clients .section__title {
-    margin-bottom: 50px;
-}
-
-.clients__list {
+.clients {
     @extend %flex-wrap;
     margin-top: -30px;
     margin-left: -30px;
