--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,7 +3,7 @@
     padding-bottom: 60px;
     background-color: var(--secondary-background-color);
 }
-.footer .container {
+.footer-container {
     display: flex;
     align-items: baseline;
 }
@@ -13,7 +13,7 @@
     margin-bottom: 20px;
 }
 
-.footer-contacts__box {
+.footer-contacts {
     margin-right: 70px;
 }
 
@@ -36,7 +36,7 @@
     }
 }
 
-.footer-contacts__link_color{
+.footer-contacts__link_other-color{
     color: var(--tertiary-text-color);
 }
 
@@ -52,7 +52,7 @@
     color: var(--tertiary-text-color);
 }
 
-.footer__social-links{
+.footer__socials{
     fill: var(--primary-background-color);
     background-color: rgba(255, 255, 255, 0.1);
 }
