--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,14 +1,10 @@
 .team {
-    background-color: var(--tertiary-background-color);
-}
-
-.team__list {
     @extend %flex-wrap;
     margin-left: -30px;
     margin-top: -30px;
 }
 
-.team__card {
+.team__item {
     flex-basis: calc((100% - 4 * 30px) / 4);
     margin-left: 30px;
     margin-top: 30px;
@@ -18,13 +14,13 @@
     border-radius: 0px 0px 4px 4px;
 }
 
-.team__card-box {
+.team__box {
     padding: 30px 32px;
     text-align: center;
     border-radius: 0px 0px 4px 4px;
 }
 
-.team__member {
+.team__title {
     margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
@@ -32,7 +28,7 @@
     letter-spacing: 0.03em;
 }
 
-.team__position {
+.team__description {
     margin-bottom: 16px;
     font-weight: 400;
     font-size: 16px;
